# Satellite-Tracker

./: .gitignore  CMakeLists.txt  Main.qml  README.md  SatelliteTracker.cpp  SatelliteTracker.h  main.cpp
